--- a/style.css
+++ b/style.css
@@ -1,6 +1,59 @@
 body{
+    color: rgb(0, 0, 0);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
     background-image:url(../projeto-teste/imagem/fundo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-     
 }
+
+.campinho{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+}
+
+.campo label {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+input[type="range"] {
+    width: 300px;
+}
+
+.resultado {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#classificacao {
+    font-size: 20px;
+}
+
+.caixa {
+    background-color: rgba(61, 65, 49, 0.5);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+} 
+
+
+
+    
+     
+
